added pools to a list